# evosax_playground

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb
notebook/: 00_getting_started.ipynb  brax_trajopt.ipynb
src/: envpool_trajopt.py
